# ai-powered-qa

./: .env.example  .gitignore  .python-version  README.md  assistants_api_run.py  auto_fill_to_browser.py  callback_handler.py  chat_model.py  code_generator.py  constants.py  demo.ipynb  file.json  function_caller.py  logging_handler.py  main.py  parse_page.ipynb  playwright.py  playwright_class.py  playwright_test.py  pre_fill.py  pyproject.toml  rewrite.py  roundtable_demo.ipynb  testing.ipynb  token_usage.md  unload_pickle.py  utils.py  web_ui.py  web_ui_fs.py  web_ui_gherin.py  web_ui_gherkin.py  web_ui_gradio.py  web_ui_interactive.py  web_ui_mind2web.py  web_ui_next.py
ai_powered_qa/: agent.py  config.py
ai_powered_qa/components/: agent.py  agent_store.py  chat_model.py  constants.py  context_message.py  function_caller.py  interaction.py  json_utils.py  playwright_functions.py  plugin.py  plugin_name_to_class.py  utils.py
components/: agent.py  chad_example.py  chat_model.py  constants.py  context_message.py  function_caller.py  json_handler.py  json_utils.py  logging_handler.py  playwright_autofill.py  playwright_functions.py  plugin.py  utils.py
data/.obsidian/: workspace.json
demo/: send_message.spec.js
images/: user-agent-loop
langchain_modules/: toolkit.py
obsolete/: lang_conf.json  main.py
scripts/: explorer.py  similarity.py  train.py  validate.py
test_specification/: example.py
tests/: test_agent.py  test_agent_reasoning.py  test_playwright.py  test_playwright_html_paging.py  test_playwright_only_visible.py  test_plugin.py  test_utils.py
(+312 files in other folders)
