[tool.poetry]
name = "ai_powered_qa"
version = "0.1.0"
description = "A demonstration of how to use GPT to generate Playwright tests"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.39.0"
langchain = "^0.0.335"
streamlit = "^1.28.1"
python-dotenv = "^1.0.0"
bs4 = "^0.0.1"
openai = "^1.2.3"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
